# notifications-dbus-arch

./: LICENSE  pyproject.toml
src/: const.py  main.py  noitifcation_parser.py  notification_window.py
templates/: notification.html
