[project]
name = "Nachotifications"
version = "0.1.0"
description = "Custom notification system for hyprland"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbus-next>=0.2.3",
    "matplotlib>=3.10.5",
    "pillow>=11.3.0",
    "pygobject>=3.52.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ruff>=0.12.8",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["F401"]

